fixed header on mobile

--- a/src/containers/ThumbnailGallery/style.css
+++ b/src/containers/ThumbnailGallery/style.css
@@ -179,4 +179,7 @@
     .gallery-grid {
         order: 2;
     }
+    .gallery-header {
+        margin-right: 0;
+    }
 }
